# prjtrellis

./: .gitattributes  .gitignore  .gitmodules  .gitversion  .readthedocs.yaml  .update-contributing.py  CONTRIBUTING.md  COPYING  README.md  create-empty-db.sh  devices.json  diamond.sh  diamond_tcl.sh  download-latest-db.sh  environment.sh  install-db.sh  meson.build
.github/: autolabeler.yml
.github/archlinux/: .SRCINFO  PKGBUILD
.github/workflows/: arch-pkg.yml
common/: devices.py
docs/: .gitignore  Makefile  conf.py  index.rst
docs/architecture/: bitstream_format.rst  general_routing.rst  global_routing.rst  glossary.rst  overview.rst  tiles.rst
docs/db_dev_process/: overview.rst
docs/dsp_support/: dsp_support.rst
docs/libtrellis/: overview.rst  textconfig.rst
examples/: .gitignore  README.md
examples/ecp5_evn/: Makefile  README.md  blinky.v  ecp5evn.lpf
examples/ecp5_evn_multiboot/: Makefile  blinky1.v  blinky2.v  ecp5evn.lpf
examples/picorv32_tinyfpga/: Makefile  attosoc.v  attosoc_tb.v  firmware.s  io_wrapper.v
examples/picorv32_ulx3s/: .gitignore  Makefile  attosoc_tb.v  firmware.s  io_wrapper.v
examples/picorv32_versa5g/: Makefile  firmware.s
examples/soc_ecp5_evn/: Makefile  README.md  attosoc.v  attosoc_tb.v  ecp5evn.lpf  firmware.c  picorv32.v  pll.v  sections.lds  simpleuart.v  start.S  start.s  top.v
examples/soc_versa5g/: .gitignore  Makefile  attosoc.v  attosoc_tb.v  firmware.c  io_wrapper.v  pll.v  sections.lds  top.v  versa.lpf
examples/tinyfpga/: Makefile  morse.v
examples/tinyfpga_ax/: .gitignore  Makefile  blinky.lpf  blinky.v  blinky_ext.lpf  blinky_ext.v  uart.lpf  uart.v
examples/tinyfpga_rev1/: Makefile  blinky.v  empty_85k.config
examples/tinyfpga_rev2/: Makefile  morse.lpf  morse.v
examples/ulx3s/: 12.mk  85k.mk  Makefile  README.md  blinky.v  hello.v  pll_120.v  uart.v  util.v
examples/ulx3s_12k_multiboot/: Makefile  README.md  blinky1.v  blinky2.v  ulx3s.lpf
examples/versa/: .gitignore  Makefile  text.in  versa_empty.config
examples/versa5g/: .gitignore  Makefile  README.md  demo.v  make_14seg.py  text.in  versa.lpf
experiments/: .gitignore  README.md
experiments/interconnect_poc/: fuzz_single_mux.py
experiments/lut_init/: fuzz_lut_init.py  lut_init_template.ncl
fuzzers/: .gitignore  README.md
fuzzers/001-plc2_routing/: fuzzer.py
fuzzers/003-lut_init/: fuzzer.py
fuzzers/005-reg_config/: fuzzer.py  reg.ncl
fuzzers/007-plc2_cemux/: fuzzer.py
fuzzers/008-plc2_clkmux/: clkmux.ncl  fuzzer.py
fuzzers/009-plc2_lsr/: fuzzer.py  lsr.ncl
fuzzers/010-plc2_modes/: fuzzer.py  modes.ncl
fuzzers/011-ccu2_inject/: fuzzer.py
fuzzers/012-ccu2_nmux/: ccu2.ncl  fuzzer.py
fuzzers/013-plc2_mkmux/: fuzzer.py
fuzzers/014-plc2_wremux/: fuzzer.py
fuzzers/017-patch_carry/: fuzzer.py
fuzzers/020-tap_drive/: fuzzer.py
fuzzers/021-spine/: fuzzer.py
fuzzers/023-cmux/: cmux_85k.ncl  fuzzer.py
fuzzers/025-midmux/: fuzzer.py
fuzzers/026-dcc/: fuzzer.py
fuzzers/027-dcs/: dcs.ncl  dcs_25k.ncl  fuzzer.py
fuzzers/028-copy_midmux/: fuzzer.py
fuzzers/030-cib_routing/: cibroute.ncl  fuzzer.py
fuzzers/031-cib_lr_routing/: fuzzer.py
fuzzers/033-copy_cib_routing/: fuzzer.py
fuzzers/035-cib_constmux/: cibconst.ncl  fuzzer.py
fuzzers/040-ebr_routing/: ebrroute.ncl  fuzzer.py
fuzzers/041-ebr_config/: fuzzer.py
fuzzers/042-ebr_mux/: fuzzer.py
fuzzers/043-cib_constmux/: cibconst.ncl  fuzzer.py
fuzzers/045-copy_cib_routing_2/: fuzzer.py
fuzzers/047-copy_ebr_config/: fuzzer.py
fuzzers/050-pio_routing/: fuzzer.py  pioroute.ncl
fuzzers/051-pio_ioconfig/: empty.ncl  fuzzer.py  pio.v
fuzzers/053-pio_term/: fuzzer.py
fuzzers/056-copy_pio_data/: fuzzer.py
fuzzers/057-bankref/: empty_85k.ncl  fuzzer.py
fuzzers/060-iologic_modes/: fuzzer.py  iologic.ncl
fuzzers/061-basic_ddr/: fuzzer.py  iologic.ncl
fuzzers/063-oddrxn/: fuzzer.py  iologic.ncl
fuzzers/064-iddrxn/: fuzzer.py  iologic.ncl
fuzzers/065-mddrx/: fuzzer.py  iologic.ncl
fuzzers/066-iodelay/: fuzzer.py
fuzzers/069-copy_pio_data/: fuzzer.py
fuzzers/070-dsp_routing/: fuzzer.py
fuzzers/071-dsp_constmux/: dspconfig.ncl  fuzzer.py
fuzzers/073-mult18_config/: dspconfig.ncl  fuzzer.py
fuzzers/075-alu54b_config/: fuzzer.py
fuzzers/076-dsp_cibo/: dspconfig.ncl  fuzzer.py
fuzzers/077-copy_dsp_config/: fuzzer.py
fuzzers/090-pll_routing/: fuzzer.py  pllroute_25k.ncl
fuzzers/091-pll_config/: fuzzer.py
fuzzers/100-usrmclk/: fuzzer.py
fuzzers/101-dtr/: fuzzer.py
libtrellis/: .gitignore  CMakeLists.txt  README.md
libtrellis/examples/: .gitignore  bit_to_config.py  compare_bits.py  config_all.py  config_to_bit.py  ddgraph.py  graph.py  logic_tile_bits.py  logic_tile_config.py  or_to_and.py  unknown_stats.py  unpack_repack.py
libtrellis/include/: Bels.hpp  BitDatabase.hpp  Bitstream.hpp  CRAM.hpp  Chip.cpp  Chip.hpp  ChipConfig.hpp  Database.hpp  DatabasePath.hpp  DedupChipdb.hpp  OptChipdb.hpp  RoutingGraph.h  RoutingGraph.hpp  Tile.hpp  TileConfig.hpp  Util.hpp
libtrellis/src/: Bels.cpp  BitDatabase.cpp  Bitstream.cpp  CRAM.cpp  Chip.cpp  ChipConfig.cpp  Database.cpp  DedupChipdb.cpp  OptChipdb.cpp  PyTrellis.cpp  RoutingGraph.cpp  Tile.cpp  TileConfig.cpp  Util.cpp
libtrellis/tests/: bitstream_io.py  run_all.sh  tile_cram.py  tile_db.py
libtrellis/tests/testdata/: devices.json
libtrellis/tests/testdata/test/testdev/: tilegrid.json
libtrellis/tests/testdata/test/tiledata/TESTTILE/: bits.db
libtrellis/tools/: ecpbram.cpp  ecpmulti.cpp  ecppack.cpp  ecppll.cpp  ecprepack.cpp  ecpunpack.cpp  version.cpp.in  version.hpp  wasmexcept.hpp
minitests/: .gitignore  README.md
minitests/dsp/: mult.v  (+3 more)
sim/: .gitignore  BB.v  IB.v  IDDRX1F.v  ILVDS.v  Makefile  OB.v  OBZ.v  ODDRX1F.v  ODDRX2F.v  OLVDS.v  gsr_pur_assign.v
tools/: .gitignore  README.md  bit_to_svf.py  compare_bits.py  connectivity.py  create_empty_bitdbs.py  ecp_vlog.py  ecpunpack.cpp  export_baseconfig.py  extract_tilegrid.py  gen_globals.py  get_tilegrid_all.py  html_all.py  html_bits.py  html_tilegrid.py  machxo2_tiles.py  read_pinout.py
(+868 files in other folders)
